# fastapi-be

./: .env.example  .gitignore  Dockerfile  README.md  config.py  db.py  google_sa.py  pyproject.toml
.github/workflows/: pr-to-main-warning.yml  ruff-check.yml
crud/: animal_crud.py
routers/: animal_router.py  main_router.py
schemas/: animal_schemas.py
utils/: enums.py
